fixed the etch a sketch inner divs to be equal
used a loop in a loop to creat all the inner divs

--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
 box-sizing: border-box;    
 margin: 0px;
 padding: 0px;
+background-color: white;
 }
 .page{
 display: flex;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 height: 100%;
@@ -15,8 +17,16 @@ padding:10vh 10vw;
 #container {
 display: flex;
 flex-wrap: wrap;
-width: 80vw;
-height: 80vh;   
+width: 1000px;
+height: 1000px;   
 border: thin solid black; 
 background-color: white;
+flex-direction: column;
+align-content: start;
+align-items: start;
+/* flex: 1 0 50; */
+}
+.reset {
+width: 100px;
+height: 85px;    
 }
