--- a/style.css
+++ b/style.css
@@ -28,5 +28,43 @@ align-items: start;
 }
 .reset {
 width: 100px;
-height: 85px;    
+height: 85px;   
+margin-bottom: 3rem; 
+}
+
+.popup {
+width: 500px;
+height: 400px;
+border-radius: 18px;
+}
+
+.PopupHolder {
+position: fixed;
+top: 0;
+bottom: 0;
+width: 100%;
+display: none;
+justify-content: center;
+align-items: center;  
+background-color: rgba(48, 36, 42, 0.39);  
+}
+
+.popupTop h2 {
+text-align: center;
+font-size: 1.5rem;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
+margin-bottom: 8rem;  
+}
+
+#leftsideInput, #topsideInput {
+width: 8rem;
+height: 2rem;
+}
+.popupMiddle {
+display: flex;
+justify-content: center;    
+}
+.popupSubmit {
+margin-left: 45%;  
+margin-top: 5%;  
 }
